10-Fargate-Profile-Basic/10-02-Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/03-ns-ums/05-UserManagement-NodePort-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-restapp-nodeport-service
  labels:
    app: usermgmt-restapp
    runon: fargate
  namespace: ns-ums
  annotations:
    alb.ingress.kubernetes.io/heathcheck-path: /usermgmt/health-status
spec:
  type: NodePort
  selector:
    app: usermgmt-restapp
  ports:
    - port: 8095
      targetPort: 8095
